# OWL-fullstack-assignment

./: .gitignore  stock-data (1)[69].csv
backend/: README.md  __init__.py  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  stocks.py
backend/app/models/: __init__.py  stock.py
backend/app/services/: __init__.py  stock_service.py
backend/app/utils/: __init__.py  csv_loader.py
frontend/: README.md  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: CumulativeReturns.tsx  LineChart.tsx  StockChart.tsx  StockList.tsx
frontend/src/components/ui/: alert.tsx  skeleton.tsx
frontend/src/lib/: api.ts  types.ts  utils.ts
